Fix erro na router
